# Shopping_Agent

./: README.md  app.py  hello.py  pyproject.toml  requirements.txt
myproject/: pyproject.toml
myproject/src/myproject/: app.py  mock_data.py
